# skypro_shop

./: .gitignore  README.md  pyproject.toml
config/: settings.py
